fix modal animation on mobile

--- a/src/component-css/PieceModal.css
+++ b/src/component-css/PieceModal.css
@@ -3,10 +3,9 @@
     z-index: 8;
     background-color: rgba(255, 255, 255, 0);
     position: fixed;
-    height: 80vh;
-    width: 80vw;
-    top: 10vh;
-    left: 10vw;
+    /* height: 80vh;
+    width: 80vw; */
+    top: -15px;
     transition: height 0.2s ease-out, width 0.2s ease-out;
     color: black
 }
@@ -32,16 +31,13 @@
     width: 100vw;
     top: 0;
     left: 0;
-    transition: opacity 0.2s ease-out, height 0.2s ease-out, width 0.2s ease-out, top 0.2s ease-out, left 0.2s ease-out,;
+    transition: opacity 0.2s ease-out, top 0.2s ease-out, left 0.2s ease-out,;
 }
 
 .piece-modal-image-container {
     height: 100%;
     width: 40vw;
     background-color: rgb(185, 185, 185);
-    border-right: solid #000;
-    border-color: black;
-    border-width: 2px;
     display: flex;
 }
 .piece-modal-current-image {
@@ -109,8 +105,15 @@
 @media screen and (max-width: 1000px) {
     .piece-modal-open {
         display: flex;
+        
+    }
+    .modal-close-button {
+        margin-top: 15vh;
+    }
+    .modal-content {
+        display: flex;
         flex-direction: column;
-        opacity: 0;
+        height: 70vh;
     }
     .piece-modal-image-container {
         height: 400px;
@@ -118,7 +121,10 @@
     }
     .piece-modal-info {
         width: auto;
-        height: auto;
+        margin-bottom: 0;
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
     }
     .piece-modal-info .description, .piece-modal-info .measurements{
         font-size: medium;
